[gd_scene load_steps=10 format=3 uid="uid://ccbh2j41hm6yv"]

[ext_resource type="Script" path="res://local_assets/actors/lootables/chest/src/sbd_chest_2.gd" id="1_w050j"]
[ext_resource type="Texture2D" uid="uid://qanxh1805fcd" path="res://local_assets/actors/lootables/chest/art/ss_chest_open.png" id="2_tjcfp"]
[ext_resource type="AudioStream" uid="uid://blxc0ut833d51" path="res://local_assets/actors/lootables/chest/sound/A_Chest.ogg" id="3_uhw24"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xsqst"]
atlas = ExtResource("2_tjcfp")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tspmd"]
atlas = ExtResource("2_tjcfp")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5s30"]
atlas = ExtResource("2_tjcfp")
region = Rect2(384, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_s2itx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsqst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tspmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5s30")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8or3t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mar6m"]
radius = 6.69169

[node name="sbd_chest_2" type="StaticBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_w050j")
coins_collected = 5

[node name="ans_chest_2" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s2itx")

[node name="cob_2" type="CollisionShape2D" parent="."]
scale = Vector2(2.8, 2.135)
shape = SubResource("RectangleShape2D_8or3t")

[node name="are_2" type="Area2D" parent="."]
scale = Vector2(10.465, 10.465)
collision_layer = 4

[node name="cob_open_area_2" type="CollisionShape2D" parent="are_2"]
shape = SubResource("CircleShape2D_mar6m")
debug_color = Color(0.804805, 0.415205, 0.0824289, 0.42)

[node name="asp_chest_open" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_uhw24")
volume_db = -12.513

[connection signal="body_entered" from="are_2" to="." method="_on_are_2_body_entered"]
[connection signal="body_exited" from="are_2" to="." method="_on_are_2_body_exited"]
